--- a/centos7.yml
+++ b/centos7.yml
@@ -2,6 +2,7 @@
 - name: "Centos 7 LAMP Installation"
   hosts: 127.0.0.1
   connection: local
+  vars_files: "{{ gitclonepath }}/group_vars/centos7.yml"
   become: true
   become_method: sudo
   become_user: root
