Correction of task file

--- a/roles/php/tasks/main.yml
+++ b/roles/php/tasks/main.yml
@@ -6,7 +6,8 @@
     state: present
 
 - name: "Apache restart"
-  ansibl.builtin.service:
+  ansible.builtin.service:
+    name: httpd
     state: restarted
-
+    enabled: yes
 
